--- a/app/views/club_templates/club_profile_edit.html.erb
+++ b/app/views/club_templates/club_profile_edit.html.erb
@@ -107,9 +107,9 @@
           </button>
           </form>
           
-          <a href="#" class="btn btn-light btn-block">
+          <!--<a href="#" class="btn btn-light btn-block">
             Edit Past Events
-          </a>
+          </a>-->
         </div>
       </div>
 <div class="row p-4">
