--- a/app/views/club_templates/search.html.erb
+++ b/app/views/club_templates/search.html.erb
@@ -643,7 +643,7 @@
 <% end %>
 
 <div class="row m-5">
-  <div class="col-md-12 text-center">
+  <!--<div class="col-md-12 text-center">
     <a href="/search" class="btn btn-secondary">Back to top</a>
-  </div>
+  </div>-->
 </div>
