added create club button to search page

--- a/app/views/club_templates/search.html.erb
+++ b/app/views/club_templates/search.html.erb
@@ -646,4 +646,7 @@
   <!--<div class="col-md-12 text-center">
     <a href="/search" class="btn btn-secondary">Back to top</a>
   </div>-->
+  <a href="/clubprofile_create" class="btn btn-primary btn-block">
+          Create Club
+        </a>
 </div>
