fixed bug with first card

--- a/app/views/club_templates/search.html.erb
+++ b/app/views/club_templates/search.html.erb
@@ -3,6 +3,8 @@
 </div>
 
 <div class="row">
+  
+  <!--FILTERS ON THE LEFT SIDE OF PAGE ---------------------------------------------------------------------->
     <div class="col-md-1">
         <!--spacer-->
     </div>
@@ -37,6 +39,7 @@
             </li>
           </ul>
         </div>
+        </form>
         </br>
 
 <a href="/clubprofile_create" class="btn btn-primary btn-block">
@@ -107,12 +110,12 @@
     </li>
 <=% end %>
   </ul>
-</div>
-</form>
--->
+</div>-->
+
+
 </div>
 
-<!--IF CLUBS ARE DISPLAYED -->
+<!--IF CLUBS ARE DISPLAYED  ---------------------------------------------------------------------->
 <% if @clubfilter == 1 %>
 <div class="col-md-9 pl-5">
 <div class="row mt-4">
@@ -126,6 +129,7 @@
 <div class="row mt-3">
 <% end %>
     <div class="col-md-3">
+<!--CLUB CARD ---------------------------------------------------------------------->
         <div class="card mb-3" style="width: 18.3rem;">
           <img class="card-img-top" src="<%= club.source %>" onerror="this.src='https://storage.googleapis.com/indie-hackers.appspot.com/product-avatars/quick-and-simple-image-placeholders/bcohuFwnmPgIu4aM56YZudq12m02'"  style="height:220px">
           <div class="row mt-3  ml-3">
@@ -166,7 +170,7 @@
               </button>
             </div>
               
-          
+<!--CLUB DETAILS MODAL ---------------------------------------------------------------------->          
 
 <div class="modal fade <%= club.id %>" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -233,6 +237,8 @@
   </div>
 </div>
 
+<!--CLUB FAVORITE MODAL ---------------------------------------------------------------------->
+
 <div class="modal fade <%= club.id %>favorite"  tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
@@ -273,6 +279,8 @@
     </div>
   </div>
 </div>
+
+<!-- CLUB MEMBERS MODAL ---------------------------------------------------------------------->
 
 <div class="modal fade <%= club.id %>people"  tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
@@ -318,7 +326,7 @@
 
 <% end %>
 
-<!--IF EVENTS ARE DISPLAYED ------------------>
+<!-- IF EVENTS ARE DISPLAYED ---------------------------------------------------------------------->
 
 
 <% if @eventfilter == 1 %>
@@ -334,6 +342,7 @@
   <div class="row mt-3">
 <% end %>
     <div class="col-md-3">
+<!--EVENT CARD ---------------------------------------------------------------------->
         <div class="card mb-3" style="width: 18.3rem;">
           <img class="card-img-top" src="<%= event.image %>" onerror="this.src='https://storage.googleapis.com/indie-hackers.appspot.com/product-avatars/quick-and-simple-image-placeholders/bcohuFwnmPgIu4aM56YZudq12m02'" style="height:220px">
           <div class="card-body">
@@ -377,6 +386,7 @@
             </div>
               
           
+<!--EVENT DETAILS MODAL ---------------------------------------------------------------------->
 
 <div class="modal fade <%= event.id %>show" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -464,6 +474,8 @@
   </div>
 </div>
 
+<!--SHARE EVENT MODAL ---------------------------------------------------------------------->
+
 <div class="modal fade <%= event.id %>share" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content">
@@ -520,6 +532,8 @@
   </div>
 </div>
 
+<!--RSVP EVENT MODAL ---------------------------------------------------------------------->
+
 <div class="modal fade <%= event.id %>rsvp"  tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
@@ -561,6 +575,7 @@
   </div>
 </div>
 
+<!--UNRSVP EVENT MODAL ---------------------------------------------------------------------->
 <% if event.users.include? current_user %>
 <div class="modal fade <%= event.id %>unrsvp"  tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
@@ -599,6 +614,9 @@
   </div>
 </div>
 <% end %>
+
+<!--EVENT ATTENDEES MODAL ---------------------------------------------------------------------->
+
 <div class="modal fade <%= event.id %>eventpeople"  tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
